--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,14 @@
 /*  your css code here. If applicable */
+
+body{
+	position : relative;
+}
+#line{
+	position : absolute;
+	top : 200px;
+	left : 200px;
+	width : 200px;
+	height : 2px;
+	background-color : black;
+	
+}
